[gd_scene load_steps=3 format=3 uid="uid://cg7g0s35vjakf"]

[ext_resource type="Theme" uid="uid://dvnhrp7jsje0b" path="res://default_theme.tres" id="1_dcmab"]
[ext_resource type="Script" uid="uid://0fsqavdw78hg" path="res://ui/game_ui.gd" id="1_w46tp"]

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_w46tp")

[node name="Control_state" type="Control" parent="."]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme = ExtResource("1_dcmab")

[node name="MarginContainer" type="MarginContainer" parent="Control_state"]
layout_mode = 1
offset_right = 243.0
offset_bottom = 101.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PanelContainer" type="PanelContainer" parent="Control_state/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control_state/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Label_life" type="Label" parent="Control_state/MarginContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.55429, 0.554549, 0.302001, 1)
theme_override_font_sizes/font_size = 40
text = "LIFE: 000"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="Control_state"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -243.0
offset_bottom = 101.0
grow_horizontal = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PanelContainer" type="PanelContainer" parent="Control_state/MarginContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control_state/MarginContainer2/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Label_ring" type="Label" parent="Control_state/MarginContainer2/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.552941, 0.552941, 0.301961, 1)
theme_override_font_sizes/font_size = 40
text = "RING: 000"
horizontal_alignment = 1

[node name="Control_win" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme = ExtResource("1_dcmab")

[node name="PanelContainer" type="PanelContainer" parent="Control_win"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -218.5
offset_top = -107.0
offset_right = 218.5
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control_win/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Control_win/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Control_win/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "[color=\"#ded851\"][wave]CONGRATULATIONS![/wave][/color]
YOU WIN
"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1

[node name="Button_menu" type="Button" parent="Control_win/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = " MENU "

[node name="Control_loose" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme = ExtResource("1_dcmab")

[node name="PanelContainer" type="PanelContainer" parent="Control_loose"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -218.5
offset_top = -107.0
offset_right = 218.5
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control_loose/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Control_loose/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Control_loose/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "[color=\"#a22425\"][shake]SORRY![/shake][/color]
YOU'RE DEAD
"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1

[node name="Button_menu" type="Button" parent="Control_loose/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = " MENU "

[connection signal="pressed" from="Control_win/PanelContainer/MarginContainer/VBoxContainer/Button_menu" to="." method="_on_button_menu_pressed"]
[connection signal="pressed" from="Control_loose/PanelContainer/MarginContainer/VBoxContainer/Button_menu" to="." method="_on_button_menu_pressed"]
